--- a/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
+++ b/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DynamicProgramming\ClimbingStairs.cs" />
+    <Compile Include="DynamicProgramming\Knapsack.cs" />
     <Compile Include="DynamicProgramming\LIS.cs" />
     <Compile Include="DynamicProgramming\NumberTower.cs" />
     <Compile Include="Program.cs" />
