--- a/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
+++ b/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
@@ -57,7 +57,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue\ArrayQueue.cs" />
+    <Compile Include="Queue\IQueue.cs" />
+    <Compile Include="Queue\LoopQueue.cs" />
     <Compile Include="Stack\ArrayStack.cs" />
+    <Compile Include="Stack\IStack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
