--- a/src/AlgorithmNote/UnitTest/UnitTest.csproj
+++ b/src/AlgorithmNote/UnitTest/UnitTest.csproj
@@ -51,8 +51,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Array\ArrayListTest.cs" />
+    <Compile Include="Heap\HeapTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue\QueueTest.cs" />
+    <Compile Include="Stack\StackTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AlgorithmNote\AlgorithmNote.csproj">
@@ -60,9 +62,7 @@
       <Name>AlgorithmNote</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Stack\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
