--- a/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
+++ b/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Queue\LoopQueue.cs" />
     <Compile Include="Stack\ArrayStack.cs" />
     <Compile Include="Stack\IStack.cs" />
+    <Compile Include="Stack\LinkedListStack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
