--- a/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
+++ b/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue\ArrayQueue.cs" />
     <Compile Include="Queue\IQueue.cs" />
+    <Compile Include="Queue\LinkedListQueue.cs" />
     <Compile Include="Queue\LoopQueue.cs" />
     <Compile Include="Stack\ArrayStack.cs" />
     <Compile Include="Stack\IStack.cs" />
