--- a/src/AlgorithmNote/UnitTest/UnitTest.csproj
+++ b/src/AlgorithmNote/UnitTest/UnitTest.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue\QueueTest.cs" />
     <Compile Include="Stack\StackTest.cs" />
+    <Compile Include="Tree\TreeTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AlgorithmNote\AlgorithmNote.csproj">
