--- a/src/AlgorithmNote/UnitTest/UnitTest.csproj
+++ b/src/AlgorithmNote/UnitTest/UnitTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="LinkedList\LinkedListTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue\QueueTest.cs" />
+    <Compile Include="Sort\BubbleSortTest.cs" />
     <Compile Include="Stack\StackTest.cs" />
     <Compile Include="Tree\TreeTest.cs" />
   </ItemGroup>
