--- a/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
+++ b/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
@@ -106,9 +106,11 @@
     <Compile Include="Stack\OrderedStack.cs" />
     <Compile Include="String\KMP.cs" />
     <Compile Include="Tree\AVL.cs" />
+    <Compile Include="Tree\BasicTree\ConstructTree.cs" />
+    <Compile Include="Tree\BasicTree\TreeNode.cs" />
     <Compile Include="Tree\BST.cs" />
     <Compile Include="Tree\SegmentTree.cs" />
-    <Compile Include="Tree\Trie.cs" />
+    <Compile Include="Tree\Trie\Trie.cs" />
     <Compile Include="TwoPointers\TrapWater.cs" />
   </ItemGroup>
   <ItemGroup>
