--- a/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
+++ b/src/AlgorithmNote/AlgorithmNote/AlgorithmNote.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Graph\Edge.cs" />
     <Compile Include="Graph\GraphSearch.cs" />
     <Compile Include="Graph\IGraph.cs" />
+    <Compile Include="Graph\MinimumSpanTree\KruskalMST.cs" />
     <Compile Include="Graph\MinimumSpanTree\LazyPrimMST.cs" />
     <Compile Include="Graph\MinimumSpanTree\PrimMST.cs" />
     <Compile Include="Graph\Path.cs" />
